--- a/Lab7_Smart-Cart/Lab7_Smart-Cart.csproj
+++ b/Lab7_Smart-Cart/Lab7_Smart-Cart.csproj
@@ -8,4 +8,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+
+	<ItemGroup>
+		<None Update ="Products.txt">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+
+
+	</ItemGroup>
 </Project>
